# matplotlib-backend-sixel

./: README.md  __init__.py  pyproject.toml
matplotlib-backend-sixel/: __init__.py
