[project]
name = "matplotlib-backend-sixel"
version = "1.0.0"
description = "show matplotlib plots directly in your sixel-enabled terminal"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Framework :: Matplotlib",
    "Topic :: Terminals",
]
dependencies = [ "matplotlib" ]

[project.urls]
"Homepage" = "https://github.com/ctorney/matplotlib-backend-sixel"
"Bug Tracker" = "https://github.com/ctorney/matplotlib-backend-sixel/issues"

[build-system]
requires = [ "setuptools>=61.0" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "." ]
